[metadata]
name = my_package
version = 0.1.0
author = Juan Carlos DÃaz VÃlez
author_email = juanarlos@icecube.wisc.edu
description = A simple package for working with FITS multimaps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jcdiazvelez/cra-ahlers-llh/
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent

[options]
package_dir =
= src/python
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src/python
